--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -345,7 +343,7 @@
                 <p>PowerBI</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="https://app.powerbi.com/view?r=eyJrIjoiMDg4ZWE2OTItMzFmYi00YTYyLTg0YjMtZTQ4Yzc5ZTAwMTA0IiwidCI6ImQ5MTc1NWE3LTg5ZTQtNDljYy1hMmI0LTNiMTk1NGZhYzRiNCIsImMiOjZ9&pageName=ReportSectionf5a881a8e3748aa298bc"  data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -380,7 +378,7 @@
                 <p>PowerBI</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="https://app.powerbi.com/view?r=eyJrIjoiMDg4ZWE2OTItMzFmYi00YTYyLTg0YjMtZTQ4Yzc5ZTAwMTA0IiwidCI6ImQ5MTc1NWE3LTg5ZTQtNDljYy1hMmI0LTNiMTk1NGZhYzRiNCIsImMiOjZ9&pageName=ReportSectionf5a881a8e3748aa298bc"  data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
