--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Senior Data Analyst &amp; Web Developer.</h3>
+            <h3> Data Analyst &amp; Web Developer.</h3>
             <p class="fst-italic">
               Here are some facts about me.
             </p>
@@ -237,23 +237,27 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior Data Analyst</h4>
+              <h4>Data Analyst</h4>
               <h5>May 2020 - Present</h5>
-              <p><em>SwiftLearn IT Solutions- Contractor – Columbia, MD |</em></p>
+              <p><em>Community Banks of Colorado- Contractor|</em></p>
               <ul>
-                <li>Implementing and improving AI technologies to enhance client experience with AI, Q & A pages that allow clients to easily access data and data visualizations by asking questions.</li>
-                <li>Implementing AI technologies to identify opportunities and new strategies by visualizing key influencers in positive product performance to provide customers with a comprehensive approach to understand data</li>
-                <li>Documented data limitations to increase	efficiency of internal and external data analysis</li>
+                <li>Work cross-functional with leadership, program managers, and other stakeholders to understand and achieve business priorities</li>
+                <li>Elicit business requirements and develop measurement plans for strategic program</li>
                 <li>Utilize SSIS for ETL data modeling ,data migration and analysis.</li>
                 <li>Supported business lead in the execution and presentation of special assignments</li>
+                <li>Collect and analyze data through manual and automated collection methods</li>
+                <li>Analyze large data sets and translate abstract data into highly visual and easily-digestible</li>
+                <li>Translate abstract data into easily-digestible and highly-visual dashboard applications and executive-level report deliverables</li>
+                
               </ul>
             </div>
             <div class="resume-item">
               <h4>Data Analyst </h4>
               <h5>Feb 2018 – May 2020</h5>
-              <p><em>SwiftLearn IT Solutions- Contractor – Columbia, MD |</em></p>
+              <p><em>New West Physicians-  Contractor|</em></p>
               <ul>
                 <li>Implemented daily blending and ETL(extract, transform, and load) to datasets into varying RDBMS (Relational Database Management Systems)</li>
+                <li>Collaborate with other analysts, data engineers, and data scientists to provide exceptional customer support to our internal stakeholders</li>
                 <li>Data construction and report infrastructure was built from stem to stern using SQL and Tableau.</li>
                 <li>Ran and updated quality checks on ERWIN data models with an automated tool</li>
                 <li>Utilized tableau to develop beautiful dashboards and dynamic visuals</li>
@@ -261,6 +265,8 @@
                 <li>Using interactive dashboards and story’s to develop new strategies to improve business efficiency and performance. Worked within data limits to	increase efficiency of external and internal data analysis </li>
                 <li>Performing qualitative and quantitative business analysis with the use of mathematical modeling and other optimization techniques</li>
                 <li>Supported organizational teams with creation of flow charts, processed and prioritized goals dynamically complied with other management report</li>
+                <li>Documented data limitations to increase	efficiency of internal and external data analysis</li>
+                
               </ul>
             </div>
           </div>
