--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Data Analyst</h4>
+              <h4>Data Analyst / Business Intelligence Developer</h4>
               <h5>May 2020 - Present</h5>
               <p><em>Community Banks of Colorado- Contractor|</em></p>
               <ul>
@@ -252,7 +252,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Data Analyst </h4>
+              <h4>Data Analyst / Business Intelligence Developer</h4>
               <h5>Feb 2018 – May 2020</h5>
               <p><em>New West Physicians-  Contractor|</em></p>
               <ul>
