--- a/index.html
+++ b/index.html
@@ -232,7 +232,12 @@
               <p><em>Front Range University, Fort Collins, Co| May 2019</em></p>
               <p>Graduated</p>
             </div>
-            
+            <div class="resume-item">
+              <h4>Petroleum Engineering</h4>
+              <h5>2019- 2021</h5>
+              <p><em>Colorado School of Mines, Golden, Co</em></p>
+              <p>Alumni</p>
+            </div>
 
           </div>
           <div class="col-lg-6">
