--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Siisi Ninsing</h4>
-              <p><em> Goal-oriented, highly motivated and diligent technology professional with experience in Data Analysis, Database Development and Relational Databases. Compiled with knowledge garnered from 4 plus years of experience in fields such as Financial, Healthcare and Banking domains.Expert skills and knowledge with Business Intelligence models that establish business efficiency and  increase productivity. Expertise in managing Client expectations via controls that raise accuracy whilst delivering exceptional outcomes that are commercially viable based on extensive data mining knowledge. Natural leader with vocal and strategic team management skills, strong work ethic and thorough worker. </em></p>
+              <p><em> Goal-oriented, highly motivated and diligent technology professional with experience in Data Analysis, Database Development and Relational Databases. Along with knowledge garnered from 4 plus years of experience in fields such as Financial, Healthcare and Banking domains.Expert skills and knowledge with Business Intelligence models that establish business efficiency and  increase productivity. Expertise in managing Client expectations via controls that raise accuracy whilst delivering exceptional outcomes that are commercially viable based on extensive data mining knowledge. Natural leader with vocal and strategic team management skills and strong work ethic. </em></p>
               <ul>
                 <li>Denver, CO</li>
                 <li>(508) 723 5500</li>
@@ -247,11 +247,11 @@
               <h5>May 2020 - Present</h5>
               <p><em>Community Banks of Colorado- Contractor|</em></p>
               <ul>
-                <li>Work cross-functional with leadership, program managers, and other stakeholders to understand and achieve business priorities</li>
-                <li>Elicit business requirements and develop measurement plans for strategic program</li>
+                <li>Operated  cross-functionally with leadership, program managers, and other stakeholders to understand and accomplish business priorities</li>
+                <li>Obtain business needs and develop measurement plans for strategic program</li>
                 <li>Utilize SSIS for ETL data modeling ,data migration and analysis.</li>
                 <li>Supported business lead in the execution and presentation of special assignments</li>
-                <li>Collect and analyze data through manual and automated collection methods</li>
+                <li>Gather and analyze data through manual and automated collection methods</li>
                 <li>Analyze large data sets and translate abstract data into highly visual and easily-digestible</li>
                 <li>Translate abstract data into easily-digestible and highly-visual dashboard applications and executive-level report deliverables</li>
                 
@@ -263,7 +263,7 @@
               <p><em>New West Physicians-  Contractor|</em></p>
               <ul>
                 <li>Implemented daily blending and ETL(extract, transform, and load) to datasets into varying RDBMS (Relational Database Management Systems)</li>
-                <li>Collaborate with other analysts, data engineers, and data scientists to provide exceptional customer support to our internal stakeholders</li>
+                <li>Cooperated with other analysts, data engineers, and data scientists to provide outstanding customer support to our internal stakeholders</li>
                 <li>Data construction and report infrastructure was built from stem to stern using SQL and Tableau.</li>
                 <li>Ran and updated quality checks on ERWIN data models with an automated tool</li>
                 <li>Utilized tableau to develop beautiful dashboards and dynamic visuals</li>
