--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
               <ul>
                 <li>Denver, CO</li>
                 <li>(508) 723 5500</li>
-                <li>skelone@hotmail.com</li>
+                <li>ninsingsiisi@gmail.com</li>
               </ul>
             </div>
 
