--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
             </div>
 
             <div class="progress">
-              <span class="skill">ETL/Other Tools: Erwin Data Modeler, MS Visio, Jira, Excel.<i class="val">80%</i></span>
+              <span class="skill">ETL/Other Tools: Erwin Data Modeler, Excel.<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Querying/Programming Languages: SQL (PL/SQL,T-SQL), SAS,Python.<i class="val">100%</i></span>
+              <span class="skill">Querying/Programming Languages: SQL, SAS,Python.<i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
