--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">Tableau</li>
-              <li data-filter=".filter-web">Tableau</li>
+              <li data-filter=".filter-web">PowerBi</li>
             </ul>
           </div>
         </div>
