--- a/index.html
+++ b/index.html
@@ -238,13 +238,37 @@
               <p><em>Colorado School of Mines, Golden, Co</em></p>
               <p>Alumni</p>
             </div>
+            
+            <div class="resume-item">
+              <h4>Certificates</h4>
+              <p>Predictive Modeling and Analytics ( University of Colorado Boulder)</p>
+              <p>SnapLogic Certified Enterprise Automation Professional</p>
+              <p>SnapLogic Certified Integrator</p>
+              <p>SnapLogic Certified Architect</p>
+              <p>Consulting Fundamentals</p>
+            </div>
 
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Data Analyst / Business Intelligence Developer</h4>
-              <h5>May 2020 - Present</h5>
+              <h5>August 2022 - Present</h5>
+              <p><em> DCU- Assistant Manager in  Data Consulting | Contractor|</em></p>
+              <ul>
+                <li>Migrating tables in redshift across all environments in the software development life cycle, including production releases. Moving tables across all environments in redshift by leveraging SQL commands in  Dbeaver</li>
+                <li>Maintaining the pipelines and debugging issues that will stop the pipeline from running, (Tier 1 - Tier 3 issues)</li>
+                <li>Diagnosing SnapLogic pipeline by running jobs with a Manual job launcher(A Basic HTML Page) that would run jobs in the SnapLogic pipeline. Then debugging the pipeline by leveraging DDL commands in Dbeaver.</li>
+                <li>Ensuring smooth user experience for the client by  allowing them to easily assess business value at the time of the release without errors.</li>
+                <li>Good grasp of CRM expectations and skills with 6 years of Salesforce experience.</li>
+                <li>Working on an innovation award winner for snaplogic for data warehousing project.</li>
+                <li>Gathered requirements then delivered a powerpoint to the banking client. This led to an increase in resources allotted to the project.</li>  
+              </ul>
+            </div>
+          <div class="col-lg-6">
+            <div class="resume-item">
+              <h4>Data Analyst / Business Intelligence Developer</h4>
+              <h5>May 2020 - August 2022</h5>
               <p><em>Community Banks of Colorado- Contractor|</em></p>
               <ul>
                 <li>Operated  cross-functionally with leadership, program managers, and other stakeholders to understand and accomplish business priorities</li>
@@ -253,7 +277,11 @@
                 <li>Supported business lead in the execution and presentation of special assignments</li>
                 <li>Gather and analyze data through manual and automated collection methods</li>
                 <li>Analyze large data sets and translate abstract data into highly visual and easily-digestible</li>
-                <li>Translate abstract data into easily-digestible and highly-visual dashboard applications and executive-level report deliverables</li>
+                <li>Lead ad hoc projects and delivered dashboards according to stakeholder requirements or specifications using Salesforce Analytics.</li>
+                <li>Maintained the organization’s workbooks, by doing incremental refreshes and whole data refreshes to attain latest and greatest data.</li>
+                <li>Maintained the tableau server by removing unused workbooks and providing or removing user permissions. Improved data standards by removing duplicated data sources and providing a single version of the truth.</li>
+                <li>Completed a migration of a workbook from Greenplum datasource to a Sql server datasource</li>
+                <li>Completed a migration from tableau to PowerBi whilst maintaining the Sql server datasource</li>
                 
               </ul>
             </div>
@@ -264,6 +292,7 @@
               <ul>
                 <li>Implemented daily blending and ETL(extract, transform, and load) to datasets into varying RDBMS (Relational Database Management Systems)</li>
                 <li>Cooperated with other analysts, data engineers, and data scientists to provide outstanding customer support to our internal stakeholders</li>
+                <li>Translate abstract data into easily-digestible and highly-visual dashboard applications and executive-level report deliverables</li>
                 <li>Data construction and report infrastructure was built from stem to stern using SQL and Tableau.</li>
                 <li>Ran and updated quality checks on ERWIN data models with an automated tool</li>
                 <li>Utilized tableau to develop beautiful dashboards and dynamic visuals</li>
