--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Data Analyst / Business Intelligence Developer</h4>
+              <h4>Data Engineering / Data Analyst / Business Intelligence Developer</h4>
               <h5>August 2022 - Present</h5>
               <p><em> DCU- Assistant Manager in  Data Consulting | Contractor</em></p>
               <ul>
